@@ -5,6 +5,22 @@ module CASServer
       "#{Time.now.to_i}r%X" % rand(10**32)
     end
     module_function :random_string
+      
+    def log_controller_action(controller, params)
+      $LOG << "\n"
+      
+      /`(.*)'/.match(caller[1])
+      method = $~[1]
+      
+      if params.respond_to? :dup
+        params2 = params.dup
+        params2['password'] = '******' if params2['password']
+      else
+        params2 = params
+      end
+      $LOG.debug("Processing #{controller}::#{method} #{params2.inspect}")
+    end
+    module_function :log_controller_action
     
     class Logger < ::Logger
       def initialize(logdev, shift_age = 0, shift_size = 1048576)
